need to fix alignment

--- a/Login-Page/style.css
+++ b/Login-Page/style.css
@@ -18,8 +18,91 @@ body {
     height: 350px;
     position: relative;
     z-index: 1;
-    background: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background: rgba(248, 248, 248, 0.75);
+    box-shadow: 0 4px 6px rgba(116, 51, 51, 0.4);
     border-radius: 25px;
     border: 1px
+}
+
+.login-box {
+    max-width: 250px;
+    margin: 0 auto;
+    text-align: center; 
+}
+
+h2 {
+    color: brown;
+    margin-top: 30px;
+    margin-bottom: -20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+input {
+    padding: 10px;
+    margin-top: 25px;
+    border: none;
+    border-radius: 25px;
+    background: transparent;
+    border: 1px solid brown;
+    color: white;
+    font-size: 13px;
+}
+
+input::placeholder {
+    color: rgb(137, 74, 74);
+}
+
+input:focus {
+    outline: none;
+}
+
+.options {
+    display:flex;
+    align-items: center;
+    margin-top: 15px;
+    font-size: 12px;
+    color: brown;
+}
+
+.options input {
+    margin-right: 5px;
+    margin-top: 0px;
+}
+
+.options a {
+    text-decoration: none;
+    color: brown;
+    margin-left: auto;
+}
+
+button {
+    background: white;
+    color: brown;
+    padding: 10px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+button:hover {
+    background: transparent;
+    outline: 1px solid brown;
+}
+
+p {
+    font-size: 12px;
+    color: brown;
+    margin-top: 15px;
+}
+
+#register {
+    text-decoration: none;
+    color: brown;
+    font-weight: bold;
 }
